[gd_scene load_steps=7 format=3 uid="uid://bdjyfoiahrjme"]

[ext_resource type="Script" path="res://scripts/grid.gd" id="1_bqduj"]
[ext_resource type="PackedScene" uid="uid://dkmbopfo5dfij" path="res://scenes/tile/tile_box.tscn" id="3_6f0p6"]
[ext_resource type="PackedScene" uid="uid://cv5k0djk5cpn0" path="res://scenes/tile_selector.tscn" id="4_5e2m2"]
[ext_resource type="PackedScene" uid="uid://bboq6ux0v8giy" path="res://scenes/tile/tile_border.tscn" id="6_ksjln"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_fiec3"]
plane = Plane(0, 1, 0, -5)

[sub_resource type="BoxShape3D" id="BoxShape3D_fo15c"]
size = Vector3(4, 4, 4)

[node name="Grid" type="Node3D" node_paths=PackedStringArray("tile_box", "tile_selector")]
script = ExtResource("1_bqduj")
tile_box = NodePath("TileBox")
tile_selector = NodePath("TileSelector")

[node name="TileBox" parent="." instance=ExtResource("3_6f0p6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.72848e-12, 1.81899e-12)

[node name="TileBorder" parent="." instance=ExtResource("6_ksjln")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.72848e-12, 1.81899e-12)

[node name="TileSelector" parent="." instance=ExtResource("4_5e2m2")]

[node name="Limit" type="Area3D" parent="."]
collision_layer = 16

[node name="D" type="CollisionShape3D" parent="Limit"]
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="U" type="CollisionShape3D" parent="Limit"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 4, 0)
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="R" type="CollisionShape3D" parent="Limit"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 4, 0, 0)
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="L" type="CollisionShape3D" parent="Limit"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="F" type="CollisionShape3D" parent="Limit"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 4)
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="B" type="CollisionShape3D" parent="Limit"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_fiec3")

[node name="Boundary" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0
input_capture_on_drag = true

[node name="Collision" type="CollisionShape3D" parent="Boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 2)
shape = SubResource("BoxShape3D_fo15c")

[connection signal="body_entered" from="Limit" to="." method="_on_limit_body_entered"]
